--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Lauren Beatty"
   avatar           : "headshot.jpg"
-  bio              : "PhD Candidate in Agricultural and Resource Economics"
-  location         : "University of Maryland"
+  bio              : "Highmeadows Postdoctoral Fellow"
+  location         : "Environmental Defense Fund"
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "lbeatty1@terpmail.umd.edu"
+  email            : "lbeatty@edf.org"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
